# work_exchange_platform_backend

./: .env.example  .env.production.example  .gitignore  .gitignore copy  .pre-commit-config.yaml  CHAT_IMPLEMENTATION.md  Dockerfile  FACEBOOK_LOGIN_GUIDE.md  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
common/: debug_middleware.py  exceptions.py  managers.py  models.py
config/: adapters.py  api.py  asgi.py  consumers.py  routing.py  social_adapter.py  urls.py
config/settings/: base.py  local.py  test.py
docker-entrypoint/: django-entrypoint.sh
docs/: architecture_overview.md  deployment_guide.md  openapi.json
docs/dev/: application_development_specs.md  chat_development_specs.md  core_development_specs.md  forum_development_specs.md  helper_development_specs.md  host_development_specs.md
docs/openapi_markdown/: README.md  schemas.md
docs/openapi_markdown/endpoints-by-tag/: album.md  applications.md  calendar.md  chat.md  forum.md  health-check.md  helper-resume.md  helpers.md  hosts.md  post.md  social-authentication.md  vacancies.md
docs/prd/: application_requirements.md  authentication_requirements.md  chat_requirements.md  core_requirements.md  forum_requirements.md  helper_application.md  helper_requirements.md  host_recruitment.md  host_requirements.md  shop_life_record.md
dotenv/: .env.example
features/album/: admin.py  apis.py  apps.py  exceptions.py  models.py  schemas.py
features/album/migrations/: 0001_initial.py
features/application/: admin.py  apis.py  apps.py  exceptions.py  models.py  schemas.py
features/application/migrations/: 0001_initial.py  0002_alter_application_options.py  0002_update_application_to_use_vacancy.py
features/calendar/: apis.py  apps.py  exceptions.py  models.py  schemas.py
features/calendar/migrations/: 0001_initial.py
features/chat/: admin.py  apis.py  apps.py  consumers.py  exceptions.py  models.py  schemas.py
features/chat/migrations/: 0001_initial.py  0002_add_unique_constraint_conversation_participants.py
features/core/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  signals.py
features/core/migrations/: 0001_initial.py  (+4 more)
features/forum/: admin.py  apis.py  apps.py  exceptions.py  models.py  schemas.py
features/helper/: admin.py  apis.py  exceptions.py  models.py  schemas.py
features/host/: admin.py  apis.py  apps.py  exceptions.py  models.py  schemas.py
features/post/: admin.py  apis.py  apps.py  exceptions.py  models.py  schemas.py
tests/: conftest.py  test_helper_apis.py
tests/core/: test_signals.py
tests/features/: __init__.py
utils/: logging.py  storage.py  version.py
(+39 files in other folders)
